# cmake-pratice

./: README.md
How to create a ProjectConfig.cmake file/files/bar/: bar.c
How to create a ProjectConfig.cmake file/files/foo/: config.h.in  foo.c
Offical Tutorial/files/Step01/: .gitignore  CMakeLists.txt  tutorial.cxx
Offical Tutorial/files/Step02/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Offical Tutorial/files/Step03/: CMakeLists.txt  TutorialConfig.h.in
Offical Tutorial/files/Step04/: CMakeLists.txt  tutorial.cxx
Offical Tutorial/files/Step04/MathFunctions/: CMakeLists.txt
Offical Tutorial/files/Step05/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Offical Tutorial/files/Step06/: CMakeLists.txt
Offical Tutorial/files/Step06/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx
Offical Tutorial/files/Step07/: CMakeLists.txt
Offical Tutorial/files/Step07/MathFunctions/: CMakeLists.txt
Offical Tutorial/notes/: Step 01: A Basic Starting Point.md  Step 02: Adding a Library.md  Step 03: Adding Usage Requirements for a Library.md  Step 04: Installing and Testing.md  Step 05: Adding System Introspection.md  Step 06: Adding a Custom Command and Generated File.md  Step 07: Packaging an Installer.md  Step 08: Adding Support for a Testing Dashboard.md
